Fixes issues with multi line placeholder texts bleeding out.

--- a/components/_tiptap.scss
+++ b/components/_tiptap.scss
@@ -15,9 +15,10 @@ textarea.pat-tiptap {
 
          &:before {
             content: attr(data-placeholder);
-            color: silver;
-            float: left;
-            height: 0;
+            color: rgba(0, 0, 0, 0.4);
+            float: right;
+            width: 100%;
+            // height: 0;
          }
       }
    }
